# gifsync-api

./: .env.sample  .flaskenv  .gitignore  README.rst  mypy.ini  pyproject.toml
.github/workflows/: lint_and_test.yml
doc/: api.rst  conf.py  index.rst
gifsync_api/: __init__.py  config.py  extensions.py  jobs.py  models.py  representations.py
gifsync_api/resources/: auth.py  gifs.py  tasks.py  users.py
gifsync_api/routes/: __init__.py  auth.py  gifs.py  tasks.py  users.py
migrations/: env.py
migrations/versions/: d909b9718869_remove_thumbnail_column.py  dde669ba8d23_initial_migration.py
tests/: conftest.py  test_auth.py  test_config.py  test_gifs.py  test_users.py
tests/utils/: assertion.py  generation.py  requests.py
